<resources>
    <string name="app_name">SignifiersIO</string>

    <string name="title_activity_root_policy">Privacy Policy</string>
    <string name="title_activity_child_policy">Edit Exception</string>
    <string name="policy_done">Save</string>
    <string name="root_allow_string">Allow all except...</string>
    <string name="root_disallow_string">Disallow all except...</string>
    <string name="add_exception_string">New Exception</string>
    <string name="exceptions_label">Exceptions</string>
    <string name="delete_button_string">Delete</string>
    <string name="unfiltered_hint">Any</string>
    <string name="only_violations_string">Only show devices that violate my privacy preferences</string>
    <string name="show_button_string">Show</string>

    <!-- Device attributes -->
    <string name="datatype_string">Data type</string>
    <string name="devicename_string">Device name</string>
    <string name="company_string">Company</string>
    <string name="purpose_string">Purpose</string>
    <string name="status_string">Status</string>

    <string name="default_policy">{\'rule_type\':\'allow\'}</string>

    <!-- Key Strings -->
    <string name="exception_button">org.cmuchimps.signifiersio.exception_button</string>
    <string name="exception_json">org.cmuchimps.signifiersio.exception_json</string>
    <string name="exception_category">org.cmuchimps.signifiersio.exception_category</string>
    <string name="root_allow_preference">org.cmuchimps.signifiersio.root_allow_preference</string>
    <string name="privacy_policy">org.cmuchimps.signifiersio.privacy_policy</string>

</resources>
